# strip-osx-static-libraries

./: meson.build  strip.py  test.c  test2.c
